--- a/Diagnosis.App/Controls/Card/PatientHeader.xaml
+++ b/Diagnosis.App/Controls/Card/PatientHeader.xaml
@@ -7,7 +7,7 @@
              d:DesignHeight="30" d:DesignWidth="300">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
 
@@ -23,21 +23,26 @@
                     </MultiBinding>
                 </TextBlock.Text>
             </TextBlock>
+            <TextBlock Style="{StaticResource ScreenTitle}"
+                       Visibility="{Binding NoName, Converter={StaticResource BooleanToVisibilityConverter}}"
+                       Text="{Binding Label}">
+            </TextBlock>
         </DockPanel>
 
         <DockPanel Grid.Row="1">
-            <TextBlock Text="{Binding Id}"
-                       VerticalAlignment="Center" 
-                       MinWidth="100"/>
+            <TextBlock Text="{Binding Label}"
+                       VerticalAlignment="Center"
+                       Visibility="{Binding NoName, Converter={StaticResource NegBooleanToVisibilityConverter}}"
+                       MinWidth="100" />
             <TextBlock Text="{Binding IsMale, Converter={StaticResource SexToSign}}"
                    FontSize="20"
                    Margin="20,0,5,0"
                    VerticalAlignment="Center" />
             <TextBlock Margin="5,0,10,0"
                    VerticalAlignment="Center">
-            <TextBlock Text="{Binding Age}" />
-            <TextBlock Text="{Binding Age, Converter={StaticResource AgeToLabel}}" />
-        </TextBlock>
+                <TextBlock Text="{Binding Age}" />
+                <TextBlock Text="{Binding Age, Converter={StaticResource AgeToLabel}}" />
+            </TextBlock>
         </DockPanel>
     </Grid>
 </UserControl>
