--- a/Diagnosis.App/Controls/Card/SearchResult.xaml
+++ b/Diagnosis.App/Controls/Card/SearchResult.xaml
@@ -17,7 +17,7 @@
                 <Run> — (окончательный диагноз в курсе)</Run>
             </TextBlock>-->
             <DockPanel x:Name="appDescription" Width="{Binding ActualWidth, ElementName=searchResult}">
-                <TextBlock Text="{Binding AppointmentDate, StringFormat='{}{0:d} '}" DockPanel.Dock="Left" />
+                <TextBlock Text="{Binding AppointmentDate, Converter={StaticResource DateLabel}}" DockPanel.Dock="Left" Margin="0,0,5,0"/>
                 <ItemsControl ItemsSource="{Binding AppointmentHealthRecords}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
