--- a/Diagnosis.App/Windows/MainWindow.xaml
+++ b/Diagnosis.App/Windows/MainWindow.xaml
@@ -60,8 +60,8 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="auto" />
         </Grid.ColumnDefinitions>
 
         <Grid x:Name="header"
@@ -94,9 +94,10 @@
 
         <DockPanel x:Name="aside"
                    Visibility="{Binding LoginOpened, Converter={StaticResource NegBooleanToVisibilityConverter}}"
-                   Grid.Row="1"
+                   Grid.Row="1"                   
+                   Grid.Column="1"
                    Grid.RowSpan="2">
-            <TabControl TabStripPlacement="Left" 
+            <TabControl TabStripPlacement="Right" 
                         Margin="-2,0,0,0"
                         Padding="0">
                 <TabControl.Style>
@@ -135,7 +136,6 @@
 
         <ContentControl Content="{Binding CurrentScreen}"
                         Grid.Row="2"
-                        Grid.Column="1"
                         Margin="10" />
     </Grid>
 </Window>
