--- a/Diagnosis.App/Styles/TabControl.xaml
+++ b/Diagnosis.App/Styles/TabControl.xaml
@@ -1,5 +1,23 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Style x:Key="verticalTextBlock" TargetType="TextBlock">  
+        <Setter Property="TextAlignment" Value="Center" />
+        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
+        <Setter Property="LayoutTransform">
+            <Setter.Value>
+                <TransformGroup>
+                    <RotateTransform Angle="-90" />
+                </TransformGroup>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="leftSideExpander" TargetType="Expander">
+        <Setter Property="ExpandDirection" Value="Right" />
+        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
+        <Setter Property="Padding" Value="1,0,3,0" />
+    </Style>
+
     <Style x:Key="tabHeaderWithLine" TargetType="{x:Type TabItem}">
         <Setter Property="Template">
             <Setter.Value>
