--- a/Diagnosis.App/Windows/MainWindow.xaml
+++ b/Diagnosis.App/Windows/MainWindow.xaml
@@ -33,23 +33,6 @@
             <DataTemplate DataType="{x:Type vm:SearchViewModel}">
                 <screen:Search />
             </DataTemplate>
-
-            <Style x:Key="leftSideExpander" TargetType="Expander">
-                <Setter Property="ExpandDirection" Value="Right" />
-                <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
-                <Setter Property="Padding" Value="1,0,3,0" />
-            </Style>
-
-            <Style x:Key="verticalTextBlock" TargetType="TextBlock">
-                <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
-                <Setter Property="LayoutTransform">
-                    <Setter.Value>
-                        <TransformGroup>
-                            <RotateTransform Angle="-90" />
-                        </TransformGroup>
-                    </Setter.Value>
-                </Setter>
-            </Style>
         </ResourceDictionary>
     </Window.Resources>
 
@@ -98,7 +81,7 @@
                    Grid.Column="1"
                    Grid.RowSpan="2">
             <TabControl TabStripPlacement="Right" 
-                        Margin="-2,0,0,0"
+                        Margin="0,0,-2,0"
                         Padding="0">
                 <TabControl.Style>
                     <Style TargetType="TabControl">
@@ -135,7 +118,6 @@
         </DockPanel>
 
         <ContentControl Content="{Binding CurrentScreen}"
-                        Grid.Row="2"
-                        Margin="10" />
+                        Grid.Row="2" />
     </Grid>
 </Window>
