layout: age picker wrapping

--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -21,6 +21,7 @@
         <conv:IsLastItem x:Key="IsLastItem" />
         <conv:DateIntervalLabel x:Key="DateIntervalLabel" />
         <conv:DateLabel x:Key="DateLabel" />
+        <conv:LessThanConverter x:Key="LessThan"/>
 
         <s:Boolean x:Key="True">True</s:Boolean>
         <s:Boolean x:Key="False">False</s:Boolean>
