--- a/Diagnosis.App/Controls/Editors/ComboBoxDatePicker.xaml
+++ b/Diagnosis.App/Controls/Editors/ComboBoxDatePicker.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:Converters="clr-namespace:Diagnosis.App.Converters" 
              x:Class="Diagnosis.App.Controls.Editors.ComboBoxDatePicker"
-             mc:Ignorable="d"
-             d:DesignHeight="30" d:DesignWidth="300"
-             x:Name="root">
+             mc:Ignorable="d"             
+             d:DesignWidth="300"
+             x:Name="root"
+             Height="23">
     <UserControl.Resources>
         <Converters:MonthToString x:Key="MonthToString" />
         <Converters:IntToString x:Key="IntToString" />
@@ -21,17 +21,17 @@
         <ComboBox x:Name="comboYears"
                   Style="{StaticResource comboRight}"
             MinWidth="50"
-			SelectionChanged="comboYears_SelectionChanged"
-			IsEditable="True"
-			SelectedValue="{Binding Year, Mode=TwoWay, Converter={StaticResource IntToString}, ElementName=root}" />
+            SelectionChanged="comboYears_SelectionChanged"
+            IsEditable="True"
+            SelectedValue="{Binding Year, Mode=TwoWay, Converter={StaticResource IntToString}, ElementName=root}" />
         <ComboBox x:Name="comboMonths"
                   Style="{StaticResource comboRight}"
-			MinWidth="80"
-			SelectionChanged="comboMonths_SelectionChanged"
-			SelectedValue="{Binding Month, Mode=TwoWay, Converter={StaticResource MonthToString}, ElementName=root}" />
+            MinWidth="80"
+            SelectionChanged="comboMonths_SelectionChanged"
+            SelectedValue="{Binding Month, Mode=TwoWay, Converter={StaticResource MonthToString}, ElementName=root}" />
         <ComboBox x:Name="comboDays"
-			MinWidth="40"
-			IsEditable="True"
+            MinWidth="40"
+            IsEditable="True"
             SelectedValue="{Binding Day, Mode=TwoWay, Converter={StaticResource IntToString}, ElementName=root}" >
         </ComboBox>
     </StackPanel>
