--- a/Diagnosis.App/Controls/Editors/PatientEditor.xaml
+++ b/Diagnosis.App/Controls/Editors/PatientEditor.xaml
@@ -19,6 +19,7 @@
             <Setter Property="VerticalContentAlignment" Value="Center" />
         </Style>
         <Style TargetType="Label" BasedOn="{StaticResource label120}">
+            <Setter Property="VerticalAlignment" Value="Top" />
         </Style>
     </UserControl.Resources>
     <StackPanel>
@@ -40,11 +41,11 @@
         </DockPanel>
         <DockPanel>
             <Label Content="Дата рождения"  />
-            <editors:AgePicker Margin="0,1,0,0" />
+            <editors:AgePicker Margin="0,1,0,-15" />
         </DockPanel>
         <DockPanel>
             <Label Content="Пол" />
-            <editors:SexChooser Width="100" HorizontalAlignment="Left" Margin="0,6,0,0" />
+            <editors:SexChooser Width="100" HorizontalAlignment="Left" VerticalAlignment="Center" />
         </DockPanel>
     </StackPanel>
 </UserControl>
